Few more fixes to tidy up blue hyperlinks on match row and get div to span full page on smaller screens

--- a/assets/css/JRPL.css
+++ b/assets/css/JRPL.css
@@ -62,8 +62,8 @@ body {
 	border: 1px solid #c7c6c6;
  }
  
-.matchRow a:visited,
-.matchRow a:visited * {
+.matchRow a,
+.matchRow a * {
   text-decoration: none;
   color: #000;
 }
@@ -73,10 +73,27 @@ body {
 }
 
 .matchRow {
-	background-color: #f7f7f9;
+	background-color: #f2f2f4; /*#f7f7f9;*/
 	padding-top: 10px;
 	padding-bottom: 10px;
 	margin-bottom: 10px;
+	margin-right: -15px;
+	margin-left: -15px;
+}
+.matchRow  .row{
+	margin-right: 0;
+	margin-left: 0;
+}
+
+@media (min-width: 768px) {
+	.matchRow {
+		margin-right: 0;
+		margin-left: 0;
+	}
+	.matchRow  .row{
+		margin-right: -15px;
+		margin-left: -15px;
+	}
 }
 
 /*
